--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "i18n",
     "i18n.js"
   ],
+  "scripts": {
+    "test": "mocha"
+  },
   "author": "Nathan Faucett",
   "license": "BSD-2-Clause",
   "readmeFilename": "README.md",
@@ -21,12 +24,12 @@
     "mocha": "^2.1.0"
   },
   "dependencies": {
-    "define_property": "git://github.com/nathanfaucett/define_property",
-    "fast_slice": "nathanfaucett/fast_slice",
-    "format": "nathanfaucett/format",
-    "has": "git://github.com/nathanfaucett/has",
-    "is_array": "nathanfaucett/is_array",
-    "is_object": "nathanfaucett/is_object",
-    "is_string": "nathanfaucett/is_string"
+    "define_property": "git://github.com/nathanfaucett/define_property.git",
+    "fast_slice": "git://github.com/nathanfaucett/fast_slice.git",
+    "format": "git://github.com/nathanfaucett/format.git",
+    "has": "git://github.com/nathanfaucett/has.git",
+    "is_array": "git://github.com/nathanfaucett/is_array.git",
+    "is_object": "git://github.com/nathanfaucett/is_object.git",
+    "is_string": "git://github.com/nathanfaucett/is_string.git"
   }
 }
