--- a/package.json
+++ b/package.json
@@ -7,21 +7,26 @@
     "url": "https://github.com/nathanfaucett/i18n.git"
   },
   "main": "src/index.js",
+  "scripts": {
+    "test": "npm run test-node",
+    "test-node": "node ./test | ./node_modules/.bin/tap-spec",
+    "test-node-raw": "node ./test",
+    "test-browser-local": "zuul --local 8080 --ui tape -- ./test"
+  },
   "keywords": [
     "i18n",
     "i18n.js"
   ],
-  "scripts": {
-    "test": "mocha"
-  },
   "author": "Nathan Faucett",
-  "license": "BSD-2-Clause",
+  "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "grunt": "",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-jsbeautifier": "",
-    "mocha": "^2.1.0"
+      "grunt": "^0.4.5",
+      "grunt-contrib-jshint": "^0.11.3",
+      "grunt-jsbeautifier": "^0.2.10",
+      "tap-spec": "^4.1.0",
+      "tape": "^4.2.0",
+      "zuul": "^3.6.0"
   },
   "dependencies": {
     "define_property": "git://github.com/nathanfaucett/define_property.git",
