--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,18 @@
 language: node_js
-
 node_js:
-  - '0.12'
+  - "4.1"
+  - "4.0"
+  - "0.12"
+  - "0.11"
+  - "0.10"
+  - "0.8"
+  - "0.6"
+  - "iojs"
+
+before_install: npm install -g grunt-cli
+
+script: 'grunt jshint'
+
 
 before_install: npm install -g grunt-cli
 
