--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "i18n",
+  "name": "@nathanfaucett/i18n",
   "version": "0.0.1",
   "description": "i18n for the browser and node.js",
   "repository": {
@@ -21,22 +21,22 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.11.3",
-    "grunt-jsbeautifier": "^0.2.10",
+    "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-jsbeautifier": "^0.2.13",
     "tap-spec": "^4.1.0",
     "tape": "^4.2.2",
     "zuul": "^3.7.2"
   },
   "dependencies": {
-    "flatten_object": "git://github.com/nathanfaucett/flatten_object.git",
-    "define_property": "git://github.com/nathanfaucett/define_property.git",
-    "fast_slice": "git://github.com/nathanfaucett/fast_slice.git",
-    "format": "git://github.com/nathanfaucett/format.git",
-    "has": "git://github.com/nathanfaucett/has.git",
-    "is_null": "git://github.com/nathanfaucett/is_null.git",
-    "is_array": "git://github.com/nathanfaucett/is_array.git",
-    "is_object": "git://github.com/nathanfaucett/is_object.git",
-    "is_string": "git://github.com/nathanfaucett/is_string.git"
+    "@nathanfaucett/flatten_object": "^0.0.1",
+    "@nathanfaucett/define_property": "^0.0.1",
+    "@nathanfaucett/fast_slice": "^0.0.1",
+    "@nathanfaucett/format": "^0.0.1",
+    "@nathanfaucett/has": "^0.0.1",
+    "@nathanfaucett/is_null": "^0.0.1",
+    "@nathanfaucett/is_array": "^0.0.1",
+    "@nathanfaucett/is_object": "^0.0.1",
+    "@nathanfaucett/is_string": "^0.0.1"
   }
 }
