--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: node_js
 node_js:
+  - "6"
+  - "6.1"
+  - "5.11"
   - "4.1"
   - "4.0"
   - "0.12"
+  - "0.11"
+  - "0.10"
+  - "stable"
   - "iojs"
 
 before_install: npm install -g grunt-cli
